# Desktopper

./: .gitignore  Cargo.toml  Makefile.toml  README.md
resources/: config.toml  config.toml.example  target_deploy.sh
resources/systemd_files/: desktopper.service  desktopper_display.service  task_api.service
src/: lib.rs  main.rs  tasks.rs  trello_api.rs
src/backend/: mod.rs  tasks.rs  todo.rs  trello_api.rs
src/frontend/: buttons.rs  mod.rs  screens.rs
src/frontend/screens/: clock.rs  mod.rs  music.rs  tasks.rs
