[package]
name = "wall_disp"
version = "0.1.0"
authors = ["Jackson <jrmoffet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "^0.2", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
warp = "^0.2"
parking_lot = "0.10.2"
uuid = { version = "^0.8", features = ["serde", "v4"] }
